First real commit added basically finished the UI and the first page of the game except the shop which will come at a later time

--- a/project.css
+++ b/project.css
@@ -47,7 +47,7 @@ section {
  	text-decoration: none;
  }
   a:hover {
- 	text-decoration: underline,;
+ 	text-decoration: underline;
  	font-size:40 ;
  }
   a:active {
