--- a/homescreen.css
+++ b/homescreen.css
@@ -1,55 +1,123 @@
 body {
-	background-color: #1a1a1a;
+	background-color : #1a1a1a;
+    background-image: url(images/campsite.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 	}
 header {
-	color: #b30c2b;
-	font-size: 60px;
-	font-weight: bold;
-	font-family: papyrus, fantasy;
-	text-align: center;
-	}
+    color: yellow;
+    font-size: 60px;
+    font-weight: bold;
+    font-family: papyrus, fantasy;
+    text-align: center;
+    text-decoration: underline;
+}
+h1 {
+    text-align: center;
+}
 
 p {
-	color: #b30c2b;
+    text-shadow: white 0px 0px 10px;
+	color: yellow;
     background-color: #000000 ;
     font-family: "Courier New", monospace;
     font-size: 18px;
+}
+p {
     border: 2px;
     border-style: solid;
     border-width: 4px;
     border-radius: 25px;
     border-color: #821515;
-    margin: 25px;
+    margin: 20px 10px 5px 10px;
     padding: 20px;
     box-shadow: 0 0 15px 5px #b30c2b;
-  }
-
- h1 {
- 	color: #b30c2b;
+}
+aside {
+    text-shadow: white 0px 0px 10px;
+    color: yellow;
     background-color: #000000 ;
-    font-family: "Courier New", monospace;
-    font-size: 25px;
     border: 2px;
     border-style: solid;
     border-width: 4px;
     border-radius: 25px;
     border-color: #821515;
-    margin: 25px;
-    padding: 10px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    padding: 20px;
     box-shadow: 0 0 15px 5px #b30c2b;
+}
+h2 {
+    font-size: 16px;
+    color: black;
+    border: 2px;
+    border-style: solid;
+    border-width: 4px;
+    border-radius: 0px;
+    border-color: #990000;
+    margin: 5px;
+    padding: 5px;
+    font-weight: bolder;
+    font-family: papyrus, fantasy;
+   /* box-shadow: 0 0 15px 5px #b30c2b; */
     text-align: center;
-  }
+}
+button {
+    font-family: "Courier New", monospace;
+    color: yellow;
+    background-color: #000000;
+    border-width: 5px;
+    border: 2px solid #990000;
+    border-radius: 25px;
+    margin: 4px;
+    padding: 15px;
+    box-shadow: 0 0 15px 5px #b30c2b;
 
- a:link {
- 	text-decoration: none;
- }
-  a:visited {
- 	text-decoration: none;
- }
-  a:hover {
- 	text-decoration: none;
- 	box-shadow: 0 0 25px 15px #b30c2b;
- }
-  a:active {
- 	text-decoration: none;
- }
+}
+body{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-row-gap: 0;
+}
+header {
+    grid-row: 1;
+    grid-column: 1 / 5;
+}
+#dialogBox {
+    grid-row: 2;
+    grid-column: 2 / 4
+}
+.leftInv {
+    grid-row: 2;
+    grid-column: 1 / 2
+}
+.rightInv {
+    grid-row: 2;
+    grid-column: 4 / 5
+}
+.karma {
+    background-color: #db912a ;
+    grid-row: 3;
+    grid-column: 2 / 3
+}
+.health {
+    background-color: #1cc942 ;
+    grid-row: 3;
+    grid-column: 3 / 4
+}
+#button1 {
+    grid-row: 4;
+    grid-column: 1 / 3
+}
+#button2 {
+    grid-row: 4;
+    grid-column: 3 / 5
+}
+#button3 {
+    grid-row: 5;
+    grid-column: 1 / 3
+}
+#button4 {
+    grid-row: 5;
+    grid-column: 3 / 5
+}
