--- a/clifftop.css
+++ b/clifftop.css
@@ -1,9 +1,9 @@
-body {
-	background-color : #1a1a1a;
-    background-image: url(images/campsite.png);
+ body {
+    background-color : #14608f;
+    background-image: url(images/clifftop.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-	}
+    }
 header {
     color: yellow;
     font-size: 60px;
@@ -15,12 +15,14 @@ header {
 h1 {
     text-align: center;
 }
+
 #money {
     font-size: 26px
 }
+
 p {
     text-shadow: white 0px 0px 10px;
-	color: yellow;
+    color: yellow;
     background-color: #000000 ;
     font-family: "Courier New", monospace;
     font-size: 18px;
@@ -30,10 +32,10 @@ p {
     border-style: solid;
     border-width: 4px;
     border-radius: 25px;
-    border-color: #821515;
+    border-color: #0b7523;
     margin: 20px 10px 5px 10px;
     padding: 20px;
-    box-shadow: 0 0 15px 5px #b30c2b;
+    box-shadow: 0 0 15px 5px #2081bd;
 }
 aside {
     text-shadow: white 0px 0px 10px;
@@ -43,11 +45,11 @@ aside {
     border-style: solid;
     border-width: 4px;
     border-radius: 25px;
-    border-color: #821515;
+    border-color: #0b7523;
     margin-top: 20px;
     margin-bottom: 10px;
     padding: 20px;
-    box-shadow: 0 0 15px 5px #b30c2b;
+    box-shadow: 0 0 15px 5px #2081bd;
 }
 h2 {
     font-size: 16px;
@@ -69,11 +71,11 @@ button {
     color: yellow;
     background-color: #000000;
     border-width: 5px;
-    border: 2px solid #990000;
+    border: 2px solid #0b7523;
     border-radius: 25px;
     margin: 4px;
     padding: 15px;
-    box-shadow: 0 0 15px 5px #b30c2b;
+    box-shadow: 0 0 15px 5px #2081bd;
 
 }
 body{
