--- a/deepforest.css
+++ b/deepforest.css
@@ -1,6 +1,6 @@
 body {
 	background-color : #1a1a1a;
-    background-image: url(images/campsite.png);
+    background-image: url(images/deepforest.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 	}
@@ -15,9 +15,11 @@ header {
 h1 {
     text-align: center;
 }
+
 #money {
     font-size: 26px
 }
+
 p {
     text-shadow: white 0px 0px 10px;
 	color: yellow;
@@ -30,10 +32,10 @@ p {
     border-style: solid;
     border-width: 4px;
     border-radius: 25px;
-    border-color: #821515;
+    border-color: #9c6724;
     margin: 20px 10px 5px 10px;
     padding: 20px;
-    box-shadow: 0 0 15px 5px #b30c2b;
+    box-shadow: 0 0 15px 5px #cc8427;
 }
 aside {
     text-shadow: white 0px 0px 10px;
@@ -43,11 +45,11 @@ aside {
     border-style: solid;
     border-width: 4px;
     border-radius: 25px;
-    border-color: #821515;
+    border-color: #9c6724;
     margin-top: 20px;
     margin-bottom: 10px;
     padding: 20px;
-    box-shadow: 0 0 15px 5px #b30c2b;
+    box-shadow: 0 0 15px 5px #cc8427;
 }
 h2 {
     font-size: 16px;
@@ -69,11 +71,11 @@ button {
     color: yellow;
     background-color: #000000;
     border-width: 5px;
-    border: 2px solid #990000;
+    border: 2px solid #9c6724;
     border-radius: 25px;
     margin: 4px;
     padding: 15px;
-    box-shadow: 0 0 15px 5px #b30c2b;
+    box-shadow: 0 0 15px 5px #cc8427;
 
 }
 body{
