--- a/shop.css
+++ b/shop.css
@@ -1,6 +1,6 @@
 body {
 	background-color : #1a1a1a;
-    background-image: url(images/campsite.png);
+    background-image: url(images/shop.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 	}
